generated/bluefin/bluefinParser.cpp

// Generated from C:/Users/Lenny/IdeaProjects/bluefin\bluefin.g4 by ANTLR 4.7.2


#include "bluefinListener.h"
#include "bluefinVisitor.h"

#include "bluefinParser.h"


using namespace antlrcpp;
using namespace bluefin;
using namespace antlr4;

bluefinParser::bluefinParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

bluefinParser::~bluefinParser() {
  delete _interpreter;
}

std::string bluefinParser::getGrammarFileName() const {
  return "bluefin.g4";
}

const std::vector<std::string>& bluefinParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& bluefinParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

bluefinParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<bluefinParser::FuncDefContext *> bluefinParser::ProgramContext::funcDef() {
  return getRuleContexts<bluefinParser::FuncDefContext>();
}

bluefinParser::FuncDefContext* bluefinParser::ProgramContext::funcDef(size_t i) {
  return getRuleContext<bluefinParser::FuncDefContext>(i);
}

std::vector<bluefinParser::VarDeclContext *> bluefinParser::ProgramContext::varDecl() {
  return getRuleContexts<bluefinParser::VarDeclContext>();
}

bluefinParser::VarDeclContext* bluefinParser::ProgramContext::varDecl(size_t i) {
  return getRuleContext<bluefinParser::VarDeclContext>(i);
}

std::vector<bluefinParser::StructDefContext *> bluefinParser::ProgramContext::structDef() {
  return getRuleContexts<bluefinParser::StructDefContext>();
}

bluefinParser::StructDefContext* bluefinParser::ProgramContext::structDef(size_t i) {
  return getRuleContext<bluefinParser::StructDefContext>(i);
}


size_t bluefinParser::ProgramContext::getRuleIndex() const {
  return bluefinParser::RuleProgram;
}

void bluefinParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bluefinListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void bluefinParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bluefinListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


antlrcpp::Any bluefinParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bluefinVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

bluefinParser::ProgramContext* bluefinParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, bluefinParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(39); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(39);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
      case 1: {
        setState(36);
        funcDef();
        break;
      }

      case 2: {
        setState(37);
        varDecl();
        break;
      }

      case 3: {
        setState(38);
        structDef();
        break;
      }

      }
      setState(41); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << bluefinParser::T__12)
      | (1ULL << bluefinParser::TInt)
      | (1ULL << bluefinParser::TFloat)
      | (1ULL << bluefinParser::TString)
      | (1ULL << bluefinParser::TBool)
      | (1ULL << bluefinParser::TVoid)
      | (1ULL << bluefinParser::ID))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FuncDefContext ------------------------------------------------------------------

bluefinParser::FuncDefContext::FuncDefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

bluefinParser::TypeContext* bluefinParser::FuncDefContext::type() {
  return getRuleContext<bluefinParser::TypeContext>(0);
}

tree::TerminalNode* bluefinParser::FuncDefContext::ID() {
  return getToken(bluefinParser::ID, 0);
}

bluefinParser::ParamListContext* bluefinParser::FuncDefContext::paramList() {
  return getRuleContext<bluefinParser::ParamListContext>(0);
}

std::vector<bluefinParser::StmtContext *> bluefinParser::FuncDefContext::stmt() {
  return getRuleContexts<bluefinParser::StmtContext>();
}

bluefinParser::StmtContext* bluefinParser::FuncDefContext::stmt(size_t i) {
  return getRuleContext<bluefinParser::StmtContext>(i);
}


size_t bluefinParser::FuncDefContext::getRuleIndex() const {
  return bluefinParser::RuleFuncDef;
}

void bluefinParser::FuncDefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bluefinListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFuncDef(this);
}

void bluefinParser::FuncDefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bluefinListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFuncDef(this);
}


antlrcpp::Any bluefinParser::FuncDefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bluefinVisitor*>(visitor))
    return parserVisitor->visitFuncDef(this);
  else
    return visitor->visitChildren(this);
}

bluefinParser::FuncDefContext* bluefinParser::funcDef() {
  FuncDefContext *_localctx = _tracker.createInstance<FuncDefContext>(_ctx, getState());
  enterRule(_localctx, 2, bluefinParser::RuleFuncDef);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(43);
    type();
    setState(44);
    match(bluefinParser::ID);
    setState(45);
    match(bluefinParser::T__0);
    setState(47);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << bluefinParser::TInt)
      | (1ULL << bluefinParser::TFloat)
      | (1ULL << bluefinParser::TString)
      | (1ULL << bluefinParser::TBool)
      | (1ULL << bluefinParser::TVoid)
      | (1ULL << bluefinParser::ID))) != 0)) {
      setState(46);
      paramList();
    }
    setState(49);
    match(bluefinParser::T__1);
    setState(50);
    match(bluefinParser::T__2);
    setState(54);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << bluefinParser::T__0)
      | (1ULL << bluefinParser::T__2)
      | (1ULL << bluefinParser::T__5)
      | (1ULL << bluefinParser::T__7)
      | (1ULL << bluefinParser::T__8)
      | (1ULL << bluefinParser::T__10)
      | (1ULL << bluefinParser::T__11)
      | (1ULL << bluefinParser::T__15)
      | (1ULL << bluefinParser::T__16)
      | (1ULL << bluefinParser::TInt)
      | (1ULL << bluefinParser::TFloat)
      | (1ULL << bluefinParser::TString)
      | (1ULL << bluefinParser::TBool)
      | (1ULL << bluefinParser::TVoid)
      | (1ULL << bluefinParser::FLOAT)
      | (1ULL << bluefinParser::BOOL)
      | (1ULL << bluefinParser::STRING)
      | (1ULL << bluefinParser::ID)
      | (1ULL << bluefinParser::INT))) != 0)) {
      setState(51);
      stmt();
      setState(56);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(57);
    match(bluefinParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

bluefinParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

bluefinParser::BuiltinTypeContext* bluefinParser::TypeContext::builtinType() {
  return getRuleContext<bluefinParser::BuiltinTypeContext>(0);
}

tree::TerminalNode* bluefinParser::TypeContext::ID() {
  return getToken(bluefinParser::ID, 0);
}


size_t bluefinParser::TypeContext::getRuleIndex() const {
  return bluefinParser::RuleType;
}

void bluefinParser::TypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bluefinListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterType(this);
}

void bluefinParser::TypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bluefinListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitType(this);
}


antlrcpp::Any bluefinParser::TypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bluefinVisitor*>(visitor))
    return parserVisitor->visitType(this);
  else
    return visitor->visitChildren(this);
}

bluefinParser::TypeContext* bluefinParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 4, bluefinParser::RuleType);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(61);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case bluefinParser::TInt:
      case bluefinParser::TFloat:
      case bluefinParser::TString:
      case bluefinParser::TBool:
      case bluefinParser::TVoid: {
        enterOuterAlt(_localctx, 1);
        setState(59);
        builtinType();
        break;
      }

      case bluefinParser::ID: {
        enterOuterAlt(_localctx, 2);
        setState(60);
        match(bluefinParser::ID);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BuiltinTypeContext ------------------------------------------------------------------

bluefinParser::BuiltinTypeContext::BuiltinTypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* bluefinParser::BuiltinTypeContext::TInt() {
  return getToken(bluefinParser::TInt, 0);
}

tree::TerminalNode* bluefinParser::BuiltinTypeContext::TFloat() {
  return getToken(bluefinParser::TFloat, 0);
}

tree::TerminalNode* bluefinParser::BuiltinTypeContext::TString() {
  return getToken(bluefinParser::TString, 0);
}

tree::TerminalNode* bluefinParser::BuiltinTypeContext::TBool() {
  return getToken(bluefinParser::TBool, 0);
}

tree::TerminalNode* bluefinParser::BuiltinTypeContext::TVoid() {
  return getToken(bluefinParser::TVoid, 0);
}


size_t bluefinParser::BuiltinTypeContext::getRuleIndex() const {
  return bluefinParser::RuleBuiltinType;
}

void bluefinParser::BuiltinTypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bluefinListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBuiltinType(this);
}

void bluefinParser::BuiltinTypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bluefinListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBuiltinType(this);
}


antlrcpp::Any bluefinParser::BuiltinTypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bluefinVisitor*>(visitor))
    return parserVisitor->visitBuiltinType(this);
  else
    return visitor->visitChildren(this);
}

bluefinParser::BuiltinTypeContext* bluefinParser::builtinType() {
  BuiltinTypeContext *_localctx = _tracker.createInstance<BuiltinTypeContext>(_ctx, getState());
  enterRule(_localctx, 6, bluefinParser::RuleBuiltinType);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(63);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << bluefinParser::TInt)
      | (1ULL << bluefinParser::TFloat)
      | (1ULL << bluefinParser::TString)
      | (1ULL << bluefinParser::TBool)
      | (1ULL << bluefinParser::TVoid))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamListContext ------------------------------------------------------------------

bluefinParser::ParamListContext::ParamListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<bluefinParser::ParamContext *> bluefinParser::ParamListContext::param() {
  return getRuleContexts<bluefinParser::ParamContext>();
}

bluefinParser::ParamContext* bluefinParser::ParamListContext::param(size_t i) {
  return getRuleContext<bluefinParser::ParamContext>(i);
}


size_t bluefinParser::ParamListContext::getRuleIndex() const {
  return bluefinParser::RuleParamList;
}

void bluefinParser::ParamListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bluefinListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParamList(this);
}

void bluefinParser::ParamListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bluefinListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParamList(this);
}


antlrcpp::Any bluefinParser::ParamListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bluefinVisitor*>(visitor))
    return parserVisitor->visitParamList(this);
  else
    return visitor->visitChildren(this);
}

bluefinParser::ParamListContext* bluefinParser::paramList() {
  ParamListContext *_localctx = _tracker.createInstance<ParamListContext>(_ctx, getState());
  enterRule(_localctx, 8, bluefinParser::RuleParamList);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(65);
    param();
    setState(70);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == bluefinParser::T__4) {
      setState(66);
      match(bluefinParser::T__4);
      setState(67);
      param();
      setState(72);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamContext ------------------------------------------------------------------

bluefinParser::ParamContext::ParamContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

bluefinParser::TypeContext* bluefinParser::ParamContext::type() {
  return getRuleContext<bluefinParser::TypeContext>(0);
}

tree::TerminalNode* bluefinParser::ParamContext::ID() {
  return getToken(bluefinParser::ID, 0);
}


size_t bluefinParser::ParamContext::getRuleIndex() const {
  return bluefinParser::RuleParam;
}

void bluefinParser::ParamContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bluefinListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParam(this);
}

void bluefinParser::ParamContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bluefinListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParam(this);
}


antlrcpp::Any bluefinParser::ParamContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bluefinVisitor*>(visitor))
    return parserVisitor->visitParam(this);
  else
    return visitor->visitChildren(this);
}

bluefinParser::ParamContext* bluefinParser::param() {
  ParamContext *_localctx = _tracker.createInstance<ParamContext>(_ctx, getState());
  enterRule(_localctx, 10, bluefinParser::RuleParam);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(73);
    type();
    setState(74);
    match(bluefinParser::ID);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

bluefinParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<bluefinParser::StmtContext *> bluefinParser::BlockContext::stmt() {
  return getRuleContexts<bluefinParser::StmtContext>();
}

bluefinParser::StmtContext* bluefinParser::BlockContext::stmt(size_t i) {
  return getRuleContext<bluefinParser::StmtContext>(i);
}


size_t bluefinParser::BlockContext::getRuleIndex() const {
  return bluefinParser::RuleBlock;
}

void bluefinParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bluefinListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void bluefinParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bluefinListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}


antlrcpp::Any bluefinParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bluefinVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

bluefinParser::BlockContext* bluefinParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 12, bluefinParser::RuleBlock);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    match(bluefinParser::T__2);
    setState(80);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << bluefinParser::T__0)
      | (1ULL << bluefinParser::T__2)
      | (1ULL << bluefinParser::T__5)
      | (1ULL << bluefinParser::T__7)
      | (1ULL << bluefinParser::T__8)
      | (1ULL << bluefinParser::T__10)
      | (1ULL << bluefinParser::T__11)
      | (1ULL << bluefinParser::T__15)
      | (1ULL << bluefinParser::T__16)
      | (1ULL << bluefinParser::TInt)
      | (1ULL << bluefinParser::TFloat)
      | (1ULL << bluefinParser::TString)
      | (1ULL << bluefinParser::TBool)
      | (1ULL << bluefinParser::TVoid)
      | (1ULL << bluefinParser::FLOAT)
      | (1ULL << bluefinParser::BOOL)
      | (1ULL << bluefinParser::STRING)
      | (1ULL << bluefinParser::ID)
      | (1ULL << bluefinParser::INT))) != 0)) {
      setState(77);
      stmt();
      setState(82);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(83);
    match(bluefinParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtContext ------------------------------------------------------------------

bluefinParser::StmtContext::StmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

bluefinParser::StmtIfContext* bluefinParser::StmtContext::stmtIf() {
  return getRuleContext<bluefinParser::StmtIfContext>(0);
}

bluefinParser::StmtWhileContext* bluefinParser::StmtContext::stmtWhile() {
  return getRuleContext<bluefinParser::StmtWhileContext>(0);
}

bluefinParser::StmtReturnContext* bluefinParser::StmtContext::stmtReturn() {
  return getRuleContext<bluefinParser::StmtReturnContext>(0);
}

bluefinParser::StmtBreakContext* bluefinParser::StmtContext::stmtBreak() {
  return getRuleContext<bluefinParser::StmtBreakContext>(0);
}

bluefinParser::StmtContinueContext* bluefinParser::StmtContext::stmtContinue() {
  return getRuleContext<bluefinParser::StmtContinueContext>(0);
}

bluefinParser::BlockContext* bluefinParser::StmtContext::block() {
  return getRuleContext<bluefinParser::BlockContext>(0);
}

bluefinParser::StmtExprContext* bluefinParser::StmtContext::stmtExpr() {
  return getRuleContext<bluefinParser::StmtExprContext>(0);
}

bluefinParser::VarDeclContext* bluefinParser::StmtContext::varDecl() {
  return getRuleContext<bluefinParser::VarDeclContext>(0);
}


size_t bluefinParser::StmtContext::getRuleIndex() const {
  return bluefinParser::RuleStmt;
}

void bluefinParser::StmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bluefinListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmt(this);
}

void bluefinParser::StmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bluefinListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStmt(this);
}


antlrcpp::Any bluefinParser::StmtContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bluefinVisitor*>(visitor))
    return parserVisitor->visitStmt(this);
  else
    return visitor->visitChildren(this);
}

bluefinParser::StmtContext* bluefinParser::stmt() {
  StmtContext *_localctx = _tracker.createInstance<StmtContext>(_ctx, getState());
  enterRule(_localctx, 14, bluefinParser::RuleStmt);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(93);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(85);
      stmtIf();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(86);
      stmtWhile();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(87);
      stmtReturn();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(88);
      stmtBreak();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(89);
      stmtContinue();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(90);
      block();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(91);
      stmtExpr();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(92);
      varDecl();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtIfContext ------------------------------------------------------------------

bluefinParser::StmtIfContext::StmtIfContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

bluefinParser::ExprContext* bluefinParser::StmtIfContext::expr() {
  return getRuleContext<bluefinParser::ExprContext>(0);
}

std::vector<bluefinParser::BlockContext *> bluefinParser::StmtIfContext::block() {
  return getRuleContexts<bluefinParser::BlockContext>();
}

bluefinParser::BlockContext* bluefinParser::StmtIfContext::block(size_t i) {
  return getRuleContext<bluefinParser::BlockContext>(i);
}


size_t bluefinParser::StmtIfContext::getRuleIndex() const {
  return bluefinParser::RuleStmtIf;
}

void bluefinParser::StmtIfContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bluefinListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmtIf(this);
}

void bluefinParser::StmtIfContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bluefinListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStmtIf(this);
}


antlrcpp::Any bluefinParser::StmtIfContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bluefinVisitor*>(visitor))
    return parserVisitor->visitStmtIf(this);
  else
    return visitor->visitChildren(this);
}

bluefinParser::StmtIfContext* bluefinParser::stmtIf() {
  StmtIfContext *_localctx = _tracker.createInstance<StmtIfContext>(_ctx, getState());
  enterRule(_localctx, 16, bluefinParser::RuleStmtIf);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(95);
    match(bluefinParser::T__5);
    setState(96);
    match(bluefinParser::T__0);
    setState(97);
    expr(0);
    setState(98);
    match(bluefinParser::T__1);
    setState(99);
    block();
    setState(102);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == bluefinParser::T__6) {
      setState(100);
      match(bluefinParser::T__6);
      setState(101);
      block();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtWhileContext ------------------------------------------------------------------

bluefinParser::StmtWhileContext::StmtWhileContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

bluefinParser::ExprContext* bluefinParser::StmtWhileContext::expr() {
  return getRuleContext<bluefinParser::ExprContext>(0);
}

bluefinParser::BlockContext* bluefinParser::StmtWhileContext::block() {
  return getRuleContext<bluefinParser::BlockContext>(0);
}


size_t bluefinParser::StmtWhileContext::getRuleIndex() const {
  return bluefinParser::RuleStmtWhile;
}

void bluefinParser::StmtWhileContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bluefinListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmtWhile(this);
}

void bluefinParser::StmtWhileContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bluefinListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStmtWhile(this);
}


antlrcpp::Any bluefinParser::StmtWhileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bluefinVisitor*>(visitor))
    return parserVisitor->visitStmtWhile(this);
  else
    return visitor->visitChildren(this);
}

bluefinParser::StmtWhileContext* bluefinParser::stmtWhile() {
  StmtWhileContext *_localctx = _tracker.createInstance<StmtWhileContext>(_ctx, getState());
  enterRule(_localctx, 18, bluefinParser::RuleStmtWhile);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(104);
    match(bluefinParser::T__7);
    setState(105);
    match(bluefinParser::T__0);
    setState(106);
    expr(0);
    setState(107);
    match(bluefinParser::T__1);
    setState(108);
    block();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StmtReturnContext ------------------------------------------------------------------

bluefinParser::StmtReturnContext::StmtReturnContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

bluefinParser::ExprContext* bluefinParser::StmtReturnContext::expr() {
  return getRuleContext<bluefinParser::ExprContext>(0);
}


size_t bluefinParser::StmtReturnContext::getRuleIndex() const {
  return bluefinParser::RuleStmtReturn;
}

void bluefinParser::StmtReturnContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bluefinListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStmtReturn(this);
}

void bluefinParser::StmtReturnContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<bluefinListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStmtReturn(this);
}


antlrcpp::Any bluefinParser::StmtReturnContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<bluefinVisitor*>(visitor))
    return parserVisitor->visitStmtReturn(this);
  else
    return visitor->visitChildren(this);
}

bluefinParser::StmtReturnContext* bluefinParser::stmtReturn() {
  StmtReturnContext *_localctx = _tracker.createInstance<StmtReturnContext>(_ctx, getState());
  enterRule(_localctx, 20, bluefinParser::RuleStmtReturn);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(110);
    match(bluefinParser::T__8);
    setState(112);
    _errHandler->sync(this);
